Add deepmerge module

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "standard": "^10.0.3"
   },
   "dependencies": {
+    "deepmerge": "^2.0.1",
     "extend": "^3.0.1",
     "lodash.merge": "^4.6.0",
     "merge": "^1.2.0",
